# ambient-pico

./: .gitignore  .gitmodules  4x7seg_display_pinout.txt  CMakeLists.txt
include/: circular_buffer.h  eio_client.h  http_client.h  logger.h  lwipopts.h  max7219.h  rgb_matrix.h  sio_client.h  tcp_base.h  tcp_client.h  tcp_tls_client.h  websocket.h
pool_temp_pcb/: pool_temp_pcb.kicad_pcb  pool_temp_pcb.kicad_prl  pool_temp_pcb.kicad_pro  pool_temp_pcb.kicad_sch
scripts/: socketio_server.py  tcp_server.py
src/: circular_buffer.cpp  eio_client.cpp  max7219.cpp  pico_matrix.cpp  pico_socket.cpp  rgb_matrix.cpp  sio_client.cpp  tcp_client.cpp  tcp_tls_client.cpp  websocket.cpp
